fix: hide horizontal overflow on root element

--- a/src/styles/critical-inline.css
+++ b/src/styles/critical-inline.css
@@ -14,6 +14,10 @@ body {
   overflow-x: hidden;
 }
 
+html {
+  overflow-x: hidden;
+}
+
 :root {
   --libra-blue: #003399;
   --libra-navy: #001166;
